--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -134,25 +134,96 @@
 
     </figure>
 
-    <div class="category" id="hideOnScroll">
+    <div class="category" id="hideOnScroll" style="padding-bottom:0">
 
-        <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'New Arrivals' %}">New Arrivals</a></p>
+        <div class = "dropDownMenu">
+            <p class="dropDownButton"><a  href="{% url 'sec-view' 'New Arrivals' %}" style="color:white">New Arrivals</a></p>
+            <div class="dropDownContent">
+                <div class="dropDownContentLinks">
+                    <a>Colored Glass Collection</a>
+                    <a>Floral Bird Cachepot Collection</a>
+                    <a>Blue Wave Cachepot & Bone Frame Collection</a>
+                    <a>Clear Glass Collection</a>
+                    <a>Lexi Cachepot & Cream Tealight Collection</a>
+                    <a>Ceramic & Cement Pot Collection</a>
+                    <a>Smoked Cut Glass Collection</a>
+                    <a>eylissa & norro vase collection</a>
+                </div>
+            </div>
+        </div>
+        <div class = "dropDownMenu">
+            <p class="dropDownButton"><a  href="{% url 'sec-view' 'Decorative Accessories' %}" style="color:white">Decorative Accessories</a></p>
+            <div class="dropDownContent">
+                <div class="dropDownContentLinks">
+                    <a>Colored Glass Collection</a>
+                    <a>Floral Bird Cachepot Collection</a>
+                    <a>Blue Wave Cachepot & Bone Frame Collection</a>
+                    <a>Clear Glass Collection</a>
+                </div>
+            </div>
+            
+        </div>
+        
+        <div class = "dropDownMenu">
+            <p class="dropDownButton"><a  href="{% url 'sec-view' 'Tabletop' %}" style="color:white">Tabletop</a></p>
+            <div class="dropDownContent">
+                <div class="dropDownContentLinks">
+                    <a>Colored Glass Collection</a>
+                    <a>Floral Bird Cachepot Collection</a>
+                </div>
 
-        <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Decorative Accessories' %}">Decorative Accessories</a></p>
+            </div>
+        </div>
+        
+        <div class = "dropDownMenu">
+            <p class="dropDownButton"><a  href="{% url 'sec-view' 'Furniture' %}" style="color:white">Furniture</a></p>
+                <div class="dropDownContent">
+                    <div class="dropDownContentLinks">
+                        <a>Colored Glass Collection</a>
+                        <a>Floral Bird Cachepot Collection</a>
+                        <a>Blue Wave Cachepot & Bone Frame Collection</a>
+                        <a>Clear Glass Collection</a>
+                    </div>
+                </div>
+        </div>
 
-        <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Tabletop' %}">Tabletop</a></p>
+                  
+        <div class = "dropDownMenu">
+            <p class="dropDownButton"><a  href="{% url 'sec-view' 'Floral' %}" style="color:white">Floral</a></p>
+        </div>
 
-        <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Furniture' %}">Furniture</a></p>
+        <div class = "dropDownMenu">
+            <p class="dropDownButton"><a  href="{% url 'sec-view' 'Wall Art' %}" style="color:white">Wall Art</a></p>
+            <div class="dropDownContent">
+                <div class="dropDownContentLinks">
+                    <a>Colored Glass Collection</a>
+                    <a>Floral Bird Cachepot Collection</a>
+                </div>
+            </div>
+        </div>
 
-        <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Floral' %}">Floral</a></p>
 
-        <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Wall Art' %}">Wall Art</a></p>
+        <div class = "dropDownMenu">
+            <p class="dropDownButton"><a  href="{% url 'Raul-product' %}" style="color:white">All Products</a></p>
+        </div>
 
-        <p id="categoryP"><a style="color: white" href="{% url 'Raul-product' %}">All Products</a></p>
 
-        <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Sale' %}">Sale</a></p>
-
-        <p id="categoryP" style="color:white;">Venue Bookings</p>
+        <div class = "dropDownMenu">
+            <p class="dropDownButton" ><a  href="{% url 'sec-view' 'Sale' %}" style="color:white">Sale</a></p>
+            <div class="dropDownContent">
+                <div class="dropDownContentLinks">
+                    <a>Colored Glass Collection</a>
+                    <a>Floral Bird Cachepot Collection</a>
+                    <a>Blue Wave Cachepot & Bone Frame Collection</a>
+                    <a>Clear Glass Collection</a>
+                    <a>Lexi Cachepot & Cream Tealight Collection</a>
+                    <a>Ceramic & Cement Pot Collection</a>
+                    <a>Smoked Cut Glass Collection</a>
+                </div>
+            </div>
+        </div>
+        
+        <p id="categoryP" style="color:white"> Venue Bookings</p>
 
     </div>
 </div>
