--- a/Raul/templates/Raul/single_product.html
+++ b/Raul/templates/Raul/single_product.html
@@ -253,10 +253,12 @@
             }
 
             .numberOfItems{
-                margin:20px auto;
+                margin:20px auto 0px auto;
             }
 
-
+            .form-control{
+                margin:20px auto;
+            }
         }
 
 
