--- a/orders/templates/orders/Checkout.html
+++ b/orders/templates/orders/Checkout.html
@@ -193,7 +193,7 @@
 
                         {% endif %}
                         {% endfor %}
-                        <input value="proceed towards the payment" name="add" type="submit" class="button" >
+                        <input value="payment" name="add" type="submit" class="button" >
                     </div>
                     {% endif %}
                 </div>
