--- a/Raul_Inc/templates/Raul_Inc/cafe.html
+++ b/Raul_Inc/templates/Raul_Inc/cafe.html
@@ -55,6 +55,32 @@
             <h1>
                 Menu
             </h1>
+            <p>____Organic Blend_____</p>
+            <p>Hot Coffee ...... 3.00  3.75</p>
+            <p>Decaf Coffee ...... 3.00  3.75</p>
+            <p>Iced Coffee ...... 3.00  3.75</p>
+            <p>Cafe au-lait ...... 3.25  4.00</p>
+            <p> ____EXPRESSO_BLEND_____</p>
+            <p>Espresso ...... 2.75</p>
+            <p>Americano ...... 3.25</p>
+            <p>Macchiato ...... 3.50</p>
+            <p>Cortado ...... 3.50</p>
+            <p>Cappuccino ...... 4.00</p>
+            <p>Latte ...... 4.00</p>
+            <p>Mocha ...... 4.50</p>
+            <p>Dirty Chai Latte ...... 4.50</p>
+            <p> ____Drinks_____</p>
+            <p>Chai Latte ...... 4.25</p>
+            <p>Hot Cocoa ...... 3.00</p>
+            <p>Hot Tea ...... 3.00</p>
+            <p>Bottle Water ...... 2.00</p>
+            <p>Juice...... 2.00</p>
+            <p>Soft Drinks...... 2.50</p>
+            <p> ____Extras_____</p>
+            <p>Flavors:Vanilla, Hazelnut,Carmel ...... 2.50</p>
+            <p>Milks: Oat, Almond, Soy ...... 2.50</p>
+            <p>Espresso Shot ...... 2.50</p>
+
         </div>
     </div>
     <div class="sections1" id = "parallax">
