--- a/Raul/static/Raul/shopping-cart.css
+++ b/Raul/static/Raul/shopping-cart.css
@@ -10,115 +10,48 @@
         flex: 0 0 66.666667%;
         max-width: 66.666667%;
     }
-}
-@media (min-width: 768px){
-    .col-md-12 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 100%;
-        flex: 0 0 100%;
-        max-width: 100%;
+} 
+
+
+@media (min-width: 769px){
+    .column8 {
+        /* -webkit-box-flex: 0; */
+        -ms-flex-: 0 0 20%;
+        flex: 0 0 66.666667%;
+        max-width: 60%;
     }
-}
-    
- @media (min-width: 768px){
+
+    .col-md-8 {
+        /* -webkit-box-flex: 0; */
+        -ms-flex-: 0 0 20%;
+        flex: 0 0 66.666667%;
+        max-width: 70%;
+    }
+
+    .col-md-4 {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 33.333333%;
+        flex: 0 0 60%;
+        max-width: 60%;
+    }
+
+    .col-md-5 {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 41.666667%;
+        flex: 0 0 30%;
+        max-width: 30%;
+    }
+        
+    .col-md-5 .product-info{
+        letter-spacing: 1px;
+        padding:5px 0px;
+    }
+
     .col-md-3 {
         -webkit-box-flex: 0;
         -ms-flex: 0 0 25%;
         flex: 0 0 25%;
     }
-}
-    
-@media (min-width: 768px){
-    .colmd3 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 25%;
-        flex: 0 0 5%;
-        text-align: center;
-    }
-    
-}
-    
-@media (min-width: 768px){
-    .col-md-5 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 41.666667%;
-        flex: 0 0 30%;
-        max-width: 30%;
-    }
-        
-    .col-md-5 .product-info{
-        letter-spacing: 1px;
-        padding:5px 0px;
-    }
-}
-    
-@media (min-width: 768px){
-    .col-md-4 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 33.333333%;
-        flex: 0 0 60%;
-        max-width: 60%;
-    }
-}
-
-@media (min-width: 768px){
-    .col-md-8 {
-        /* -webkit-box-flex: 0; */
-        -ms-flex-: 0 0 20%;
-        flex: 0 0 66.666667%;
-        max-width: 70%;
-    }
-}
-
-@media (min-width: 768px){
-    .column8 {
-        /* -webkit-box-flex: 0; */
-        -ms-flex-: 0 0 20%;
-        flex: 0 0 66.666667%;
-        max-width: 60%;
-    }
-}
-
-@media  only screen and (max-width:768px){
-    .column8 {
-        /* -webkit-box-flex: 0; */
-        -ms-flex-: 0 0 20%;
-        flex: 0 0 66.666667%;
-        max-width: 60%;
-    }
-
-    .col-md-8 {
-        /* -webkit-box-flex: 0; */
-        -ms-flex-: 0 0 20%;
-        flex: 0 0 66.666667%;
-        max-width: 70%;
-    }
-
-    .col-md-4 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 33.333333%;
-        flex: 0 0 60%;
-        max-width: 60%;
-    }
-
-    .col-md-5 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 41.666667%;
-        flex: 0 0 30%;
-        max-width: 30%;
-    }
-        
-    .col-md-5 .product-info{
-        letter-spacing: 1px;
-        padding:5px 0px;
-    }
-
-    .colmd3 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 25%;
-        flex: 0 0 5%;
-        text-align: center;
-    }
 
     .col-md-12 {
         -webkit-box-flex: 0;
@@ -127,17 +60,136 @@
         max-width: 100%;
     }
 
-    .col-lg-8 {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 66.666667%;
-        flex: 0 0 66.666667%;
-        max-width: 66.666667%;
+    .shopping-cart .items .product .info {
+		padding-top: 25px;
+		text-align: left; 
+	}
+
+	.shopping-cart .items .product .info .price {
+		font-weight: bold;
+		font-size: 22px;
+        top: 17px; 
+        background: -webkit-linear-gradient(#f8f18e,#d6a55b);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+	}
+
+	.shopping-cart .items .product .info .quantity {
+        text-align: center; 
+        display: flex;
+        flex-wrap: nowrap;
+	}
+	.shopping-cart .items .product .info .quantity .quantity-input {
+		padding: 4px 10px;
+		text-align: center; 
+    }
+    
+    .container2{
+        padding:100px 50px 0 50px;
+    }
+
+    .shopping-cart .content{
+        padding:50px;
+    }
+
+    .row2{
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+        margin-right: auto;
+        margin-left: auto;
+        padding-top:30px;
+    }
+
+    .shopping-cart .block-heading{
+        padding-top: 50px;
+        margin:50px auto 0px auto;
+        width:100%;
+        text-align: left;
+    }
+
+    .summary{
+        text-align: right;
+    }
+
+    .summary .buttonCheckout{
+        padding:16px 32px;
+    }
+
+    .img-fluid{
+        max-width: 100%;
+        height: auto;
+    }
+
+    
+*, ::after, ::before {
+    box-sizing: border-box;
+}
+}
+
+@media(max-width: 768px){
+    .container2{
+        padding:100px 0 0 0;
     }
 
     .shopping-cart .content{
         padding:0px;
     }
+
+    .row2{
+        margin-right: auto;
+        margin-left: auto;
+        display: grid;
+        grid-template-rows: auto auto auto;
+        width:100%;
+        place-items: center;
+        padding-top:30px;
+    }
+
+    .product-name{
+        font-size: 25px;
+    }
+
+    .product-info{
+        margin-bottom: 10px;
+    }
+
+    .col-md-4.quantity{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .col-md-4.quantity img{
+        margin:0 0 0 0;
+    }
+
+    .shopping-cart .block-heading{
+        margin:50px auto 0px auto;
+        width:100%;
+        text-align: left;
+    }
+
+    .col-md-8{
+        padding-bottom:20px;
+    }
+
+    .summary{
+        text-align: center;
+    }
+
+    .summary .buttonCheckout{
+        padding:16px 64px;
+    }
+
+    .img-fluid{
+        width: 80%;
+    }
 }
+
+
 
 body{
     font-family: myFirstFont;
@@ -175,16 +227,10 @@ a {
 
 .container2{
 	max-width: 1280px;
-	padding:100px 50px 0px 50px;
 	margin:0px auto;
 }
 
-.shopping-cart .block-heading{
-    padding-top: 50px;
-    margin:50px auto 0px auto;
-    width:100%;
-    text-align: left;
-}
+
 
 .shopping-cart .block-heading p{
     padding:32px 32px;
@@ -210,7 +256,6 @@ a {
 .shopping-cart .content{
 	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
 	background-color: rgba(0, 0, 0, 0.2);
-    padding:50px;
     color:#cfbb63;
 }
 
@@ -232,16 +277,7 @@ a {
     padding-top:30px;
 }
 
-.row2{
-	display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    margin-right: auto;
-    margin-left: auto;
-    padding-top:30px;
-}
+
 
 .col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
     position: relative;
@@ -251,9 +287,6 @@ a {
     padding-left: 15px;
 }
 
-*, ::after, ::before {
-    box-sizing: border-box;
-}
 
 .ml-auto, .mx-auto {
     margin-left: auto!important;
@@ -265,7 +298,6 @@ a {
     display: block!important;
 }
 .img-fluid {
-    max-width: 100%;
     height: auto;
 }
 img {
@@ -314,7 +346,7 @@ button, input {
     border:none;
     text-align: center;
     outline: none;
-    border-bottom: 1px solid #cfbb63;
+    border: 2px solid #cfbb63;
     background: -webkit-linear-gradient(#f8f18e,#d6a55b);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -429,7 +461,6 @@ button, input, optgroup, select, textarea {
     max-width:1100px;
     margin:10px auto;
     padding: 30px;
-    text-align: right;
     
 }
 
@@ -454,7 +485,6 @@ button, input, optgroup, select, textarea {
 
 .summary .buttonCheckout{
     margin-top: 20px;
-    padding:16px 32px;
     color:#333333;
     font-weight: bold;
     background-color: #cfbb63;
@@ -470,28 +500,3 @@ button, input, optgroup, select, textarea {
 	margin:16px 40px;
 }
 
-@media (min-width: 768px) {
-	.shopping-cart .items .product .info {
-		padding-top: 25px;
-		text-align: left; 
-	}
-
-	.shopping-cart .items .product .info .price {
-		font-weight: bold;
-		font-size: 22px;
-        top: 17px; 
-        background: -webkit-linear-gradient(#f8f18e,#d6a55b);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-	}
-
-	.shopping-cart .items .product .info .quantity {
-        text-align: center; 
-        display: flex;
-        flex-wrap: nowrap;
-	}
-	.shopping-cart .items .product .info .quantity .quantity-input {
-		padding: 4px 10px;
-		text-align: center; 
-	}
-}
