--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -418,80 +418,17 @@
         <div class="filler"></div>
         <div class="marquee">
             <ul class="marqueeContent">
+                {%for item in Feat%}
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/small.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{{item.product.image.url}}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
-                            <div class = "textInfo"> Art </div>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/small.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
-                        <div class = "text">
-                            <div class = "textInfo"> wall art </div>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/small.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
-                        <div class = "text">
-                            <div class = "textInfo"> DINNERWARE </div>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/small.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
-                        <div class = "text">
-                            <div class = "textInfo"> FLORAL ARRANGEMENTS </div>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/small.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
-                        <div class = "text">
-                            <div class = "textInfo"> DINNERWARE </div>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/small.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
-                        <div class = "text">
-                            <div class = "textInfo"> WALL ART </div>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/small.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
-                        <div class = "text">
-                            <div class = "textInfo"> chandelier </div>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/small.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
-                        <div class = "text">
-                            <div class = "textInfo"> WAll ART </div>
-                        </div>
-                    </div>
-                </li>
 
-                <li>
-                    <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/small.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
-                        <div class = "text">
-                            <div class = "textInfo"> dinnerware </div>
+                            <a href ="{% url 'Raul-single' item.product.slug %}">   <div class = "textInfo"> {{item.product.title}}    </div></a>
                         </div>
                     </div>
                 </li>
-
+              {%endfor%}
             </ul>
         </div>
     </div>
